fixed header z-index

--- a/app/modules/main/assets/sass/_header.scss
+++ b/app/modules/main/assets/sass/_header.scss
@@ -2,6 +2,7 @@
 
 #header, header {
   @extend %gradient;
+  z-index: 10;
   .navbar {
     margin-bottom: 0;
     li.first a {
